manifests/deployment-azure-pipe.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: girishpnpipelinesjavascriptdocker 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: girishpnpipelinesjavascriptdocker
  template:
    metadata:
      labels:
        app: girishpnpipelinesjavascriptdocker 
    spec:
      containers:
        - name: girishpnpipelinesjavascriptdocker 
          image: gpreg2.azurecr.io/girishpnpipelinesjavascriptdocker
          ports:
          - containerPort: 8080
