manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: girishpnpipelinesjavascriptdocker 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: girishpnpipelinesjavascriptdocker 
    spec:
      containers:
        - name: girishpnpipelinesjavascriptdocker 
          image: gpreg2.azurecr.io/girishpnpipelinesjavascriptdocker
          ports:
          - containerPort: 8080
