manifests/service-1-git-actions.yml
apiVersion: v1
kind: Service
metadata:
    name: "aks1-54d5"
    labels:
        app: "aks1-54d5"
spec:
    type: LoadBalancer
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "aks1-54d5"
