manifests/service-azure-pipe.yml
apiVersion: v1
kind: Service
metadata:
    name: girishpnpipelinesjavascriptdocker
spec:
    type: LoadBalancer
    ports:
    - port: 8080 
    selector:
        app: girishpnpipelinesjavascriptdocker
