manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "aks1-0c50"
    labels:
        app: "aks1-0c50"
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "aks1-0c50"
