manifests/ingress-1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "aks1-0c50"
    labels:
        app: "aks1-0c50"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: aks10137-aks1-0c50.445acebfd9e5486e9c30.eastus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "aks1-0c50"
                servicePort: 8080
